# boost_communication

./: .gitignore
boost_socket/build-client-Desktop_Qt_5_6_0_GCC_64bit-Debug/: Makefile  client
boost_socket/build-socket-Desktop_Qt_5_6_0_GCC_64bit-Debug/: Makefile  socket
boost_socket/client/: chat_message.hpp  client.pro  main.cpp  main_chat.cpp
boost_socket/socket/: chat_server.cpp  main.cpp  main_chat.cpp  socket.pro
build-serial-Desktop-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  serial  serial.cbp
opencv_socket/build-client-Desktop_Qt_5_6_0_GCC_64bit-Debug/: CMakeCache.txt  Makefile  client.cbp  cmake_install.cmake  server.cbp
opencv_socket/build-server-Desktop_Qt_5_6_0_GCC_64bit-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  server.cbp
opencv_socket/client/: CMakeLists.txt  main.cpp
opencv_socket/server/: CMakeLists.txt  main.cpp
serial/: CMakeLists.txt  serial.cpp
